<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yes"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/citydriveother" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\n" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\n" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\n" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:password="true" />


    <TextView
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:text="@string/register" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\n" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/login"
        android:textColor="@color/colorAccent" />
</LinearLayout>